# CETReport

./: .gitignore  LICENSE  README.md  pyproject.toml
Modules/: CETReportETL.py  ConsolidateData.py  ExtractData.py  GlobalVars.py  LoadData.py  TransformData.py
Objects/: CommandLine.py
Tests/: test_args.py
